fixed start page overflow on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,7 @@
 .App {
 	font-family: 'Raleway';
 	height: 100vh;
-	width: 100vw;
-	margin-left: auto;
-	margin-right: auto;
+	margin: 0;
 }
 
 h1, h2 {
