--- a/src/assets/components/Start/Start.module.scss
+++ b/src/assets/components/Start/Start.module.scss
@@ -10,7 +10,7 @@
 	flex-direction: column;
     text-align: center;
     max-width: 500px;
-    margin: 20px;
+    padding: 20px;
     h1 {
         margin-bottom: 0;
         font-size: 30px;
